Fix overflow bug

--- a/editor/stylesheets/editor-structure.scss
+++ b/editor/stylesheets/editor-structure.scss
@@ -144,6 +144,7 @@ input::-webkit-inner-spin-button {
   width: 100%;
   height: 100%;
   position: absolute;
+  overflow: hidden;
 }
 
 .resizable {
